# openenv_hackthon

./: .gitignore  Dockerfile  README.md  app_ui.py  env.py  fix2.py  fix_inference.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: app.py
tasks/: task1_alert_prioritization.py  task2_threat_detection.py  task3_incident_response.py
