[project]
name = "cyberdefend-x"
version = "1.0.0"
description = "CyberDefend-X SOC Decision Intelligence Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server:app"
